fix(user,activity): 修改时间格式为时间戳
