# docs/swagger.yaml
@@ -11,8 +11,8 @@ definitions:
     properties:
       current_Number:
         type: integer
-      end_time:
-        type: string
+      endTime:
+        type: integer
       expected_number:
         type: integer
       id:
@@ -21,8 +21,8 @@ definitions:
         type: string
       location:
         $ref: '#/definitions/serializer.Point'
-      start_time:
-        type: string
+      startTime:
+        type: integer
       status:
         type: integer
       title:
@@ -37,9 +37,8 @@ definitions:
   serializer.CreateActivityInfo:
     properties:
       end_time:
-        type: string
+        type: integer
       expected_number:
-        maximum: 10000
         type: integer
       introduction:
         maxLength: 1000
@@ -47,7 +46,7 @@ definitions:
       location:
         $ref: '#/definitions/serializer.Point'
       start_time:
-        type: string
+        type: integer
       status:
         enum:
         - 1
@@ -141,8 +140,8 @@ definitions:
         type: string
       id:
         type: integer
-      last_login:
-        type: string
+      lastLogin:
+        type: integer
       location:
         $ref: '#/definitions/model.Point'
       phone:
@@ -308,6 +307,11 @@ paths:
       - application/json
       description: 查看用户信息接口
       parameters:
+      - description: Authorization header parameter
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: user ID
         in: path
         name: uid
