# internal/model/activity.go
@@ -1,8 +1,6 @@
 package model
 
 import (
-	"ji/pkg/utils/datetime"
-
 	"gorm.io/gorm"
 )
 
@@ -12,9 +10,9 @@ type Activity struct {
 	Title          string
 	Introduction   string `gorm:"size:1000"`
 	Status         int
-	StartTime      datetime.DateTime `gorm:"type:datetime"`
-	EndTime        datetime.DateTime `gorm:"type:datetime"`
-	Location       Point             `gorm:"type:point"`
+	StartTime      int64
+	EndTime        int64
+	Location       Point `gorm:"type:point"`
 	ExpectedNumber uint
 	CurrentNumber  uint
 	UserId         uint
