# internal/serializer/requeststruct.go
@@ -1,9 +1,5 @@
 package serializer
 
-import (
-	"ji/pkg/utils/datetime"
-)
-
 type BasePage struct {
 	PageNum  int `form:"page_num" json:"page_num"`
 	PageSize int `form:"page_size" json:"page_size"`
@@ -29,13 +25,13 @@ type UpdateUserInfo struct {
 }
 
 type CreateActivityInfo struct {
-	Title          string            `form:"title" json:"title" binding:"max=30"`
-	Introduction   string            `form:"introduction" json:"introduction" binding:"max=1000"`
-	Status         int               `form:"status" json:"status" binding:"required,oneof=1 2 3"`
-	StartTime      datetime.DateTime `form:"start_time" json:"start_time" time_format:"2006-01-02 15:04:05" binding:"required"`
-	EndTime        datetime.DateTime `form:"end_time" json:"end_time" time_format:"2006-01-02 15:04:05" binding:"required"`
-	Location       Point             `form:"location" json:"location"`
-	ExpectedNumber uint              `form:"expected_number" json:"expected_number" `
+	Title          string `form:"title" json:"title" binding:"max=30"`
+	Introduction   string `form:"introduction" json:"introduction" binding:"max=1000"`
+	Status         int    `form:"status" json:"status" binding:"required,oneof=1 2 3"`
+	StartTime      int64  `form:"start_time" json:"start_time"  binding:"required"`
+	EndTime        int64  `form:"end_time" json:"end_time"  binding:"required"`
+	Location       Point  `form:"location" json:"location"`
+	ExpectedNumber uint   `form:"expected_number" json:"expected_number" `
 }
 
 type NearInfo struct {
